2005-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Set up a sensible default location for GNUstep.conf
	on mingw32 systems (C:\GNUstep\GNUstep.conf).
	* configure: ditto

2005-10-27  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Standardized the format of option help, and also
	written fairly complete help on each and every option.
	* configure: Regenerated.
	
2005-10-26  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make: Removed checks for GNUSTEP_*_ROOT variables
	top-level, they are now automatically and always set by
	config.make, no need to check for them here in the new system.

2005-10-26  Nicola Pero  <n.pero@mi.flashnet.it>

	* Master/rules.make: Rewritten code that determines if this the
	top-level make invocation (in order to have the dependencies
	install: check-install-permissions all, and distclean: clean
	top-level), so that it also works when gnustep-make is invoked
	from within a makefile itself (this fixes 'make distclean' in
	gnustep-make's own Documentation/GNUmakefile).
	* common.make: Updated similar checks.
	
2005-10-26  Nicola Pero  <n.pero@mi.flashnet.it>

	* Documentation/GNUmakefile: Updated commands to create temporary
	gnustep-make installation.  Also, do not source GNUstep.sh but rely
	just on passing GNUSTEP_MAKEFILES on the make command line.

2005-10-26  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Fixed installing GNUstep.conf
	when the build directory is different from the source directory.

2005-10-23  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Fixed error in the documentation of
	--with-user-config-file option.
	* configure: Regenerated.
	
2005-10-23  Nicola Pero  <n.pero@mi.flashnet.it>

	* config.make.in: Removed code to compute GNUSTEP_HOST,
	GNUSTEP_HOST_CPU, etc, when in GNUSTEP_MULTI_PLATFORM mode -- this
	is already done by names.make later.

2005-10-23  Nicola Pero  <n.pero@mi.flashnet.it>

	This change is key to no longer having to source GNUstep.sh when