@@ -1,3 +1,10 @@
+2005-11-21  Richard Frith-Macdonald <rfm@gnu.org>
+
+	opentool.in:
+	openapp.in:
+	Changed to use new GNUstep.conf configuration file to obtain the
+	directories to search.
+
 2005-10-28  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* configure.ac: Set up a sensible default location for GNUstep.conf
